tests/golden/errors/orphan_continuation.kso
main = print "one"

  >> print "two"
