tests/golden/errors/orphan_continuation.stderr
error[formatting]: a `>>`/`.` continuation line sits directly under its statement, indented two spaces deeper
  --> orphan_continuation.kso:3:1
   3 |   >> print "two"
       ^
